--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "covid",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/qdphung19/Info_Covid19",
   "dependencies": {
     "@fontsource/roboto": "^4.5.2",
     "@highcharts/map-collection": "^1.1.4",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "gh-pages": "^3.2.3",
     "highcharts": "^9.3.3",
     "highcharts-react-official": "^3.1.0",
     "lodash": "^4.17.21",
@@ -23,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
