--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "covid",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/qdphung19/Info_Covid19",
+  
   "dependencies": {
     "@fontsource/roboto": "^4.5.2",
     "@highcharts/map-collection": "^1.1.4",
@@ -25,9 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
